# AUP-4.0

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  license_state.json  problematique_plan.txt  requirements.txt  rust_workflow_plan.txt  solution_implementation_document.txt  telemetry.json
crates/anti-tamper/: Cargo.toml
crates/anti-tamper/src/: lib.rs
crates/demo-app/: Cargo.toml  README.txt
crates/demo-app/src/: main.rs
crates/detection-layer/: Cargo.toml
crates/detection-layer/src/: lib.rs
crates/enclave-core/: Cargo.toml
crates/enclave-core/src/: lib.rs
crates/kernel-bridge/: Cargo.toml
crates/kernel-bridge/src/: lib.rs
crates/license-core/: Cargo.toml
crates/license-core/src/: lib.rs
crates/license-issuer/: Cargo.toml
crates/license-issuer/src/: main.rs
crates/license-verifier/: Cargo.toml
crates/license-verifier/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: README.txt  lib.rs
crates/sdk-ffi/: Cargo.toml
crates/sdk-ffi/include/: sdk.h
crates/sdk-ffi/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: README.txt  lib.rs
crates/tpm-binding/: Cargo.toml
crates/tpm-binding/src/: lib.rs
docs/: architecture.md  demo_options.md  demo_qa.md  demo_quickstart.md  demo_run_checklist.md  demo_script_judges.md  demo_troubleshooting.md  layout_logic.md  pitch_summary.md  sdk_implementation.txt  solution_full.md
licenses/: license.signed.json  payload.json  runtime_input.normal.json  sample.lic
licenses/keys/: private.key  public.key
scripts/: demo_anomaly.ps1  demo_honeypot.ps1  demo_run.ps1  demo_simulation.ps1  judge_demo.ps1  judge_docker_demo.ps1
sdk/node/: README.md  index.js  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/aup_sdk/: __init__.py
