[workspace]
members = [
  "crates/sdk-ffi",
  "crates/tpm-binding",
  "crates/enclave-core",
  "crates/kernel-bridge",
  "crates/detection-layer",
  "crates/anti-tamper",
  "crates/orchestrator",
  "crates/license-core",
  "crates/license-issuer",
  "crates/license-verifier",
  "crates/telemetry",
  "crates/demo-app"
]
resolver = "2"
