[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
orchestrator = { path = "../orchestrator" }
license-verifier = { path = "../license-verifier" }
detection-layer = { path = "../detection-layer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
